force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/kanbanDev__Kanban_Configuration__c.object-meta.xml
<CustomObject>
    <label>Kanban Configuration</label>
    <nameField>
        <label>Kanban Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kanban Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>