force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/fields/kanbanDev__Child_Object__c.field-meta.xml
<CustomField>
    <fullName>kanbanDev__Child_Object__c</fullName>
    <label>Child Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>