force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/fields/kanbanDev__Exclude_From_Group_By__c.field-meta.xml
<CustomField>
    <fullName>kanbanDev__Exclude_From_Group_By__c</fullName>
    <label>Exclude From Group By</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>