force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/fields/kanbanDev__Fields_To_Show__c.field-meta.xml
<CustomField>
    <fullName>kanbanDev__Fields_To_Show__c</fullName>
    <label>Fields To Show</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>