force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/fields/kanbanDev__Group_By__c.field-meta.xml
<CustomField>
    <fullName>kanbanDev__Group_By__c</fullName>
    <label>Group By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>