force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/fields/kanbanDev__Kanban_For__c.field-meta.xml
<CustomField>
    <fullName>kanbanDev__Kanban_For__c</fullName>
    <label>Kanban For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>