force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/fields/kanbanDev__Name_Field__c.field-meta.xml
<CustomField>
    <fullName>kanbanDev__Name_Field__c</fullName>
    <label>Name Field(Do Not Edit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>