force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/fields/kanbanDev__Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>kanbanDev__Relation_Field__c</fullName>
    <label>Relation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>