force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/fields/kanbanDev__Summarize_By__c.field-meta.xml
<CustomField>
    <fullName>kanbanDev__Summarize_By__c</fullName>
    <label>Summarize By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>