force-app/main/default/objects/kanbanDev__Kanban_Configuration__c/listViews/kanbanDev__All.listView-meta.xml
<ListView>
    <fullName>kanbanDev__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>